# simulation

./: .gitignore  README.md  requirements.txt  run.sh  setup.py
config/: e2e_config.yaml  e2e_educational.yaml  e2e_minimal.yaml  evaluation_config.yaml  evaluation_educational.yaml  evaluation_minimal.yaml  evaluation_test.yaml  noise_config.yaml  simulation_circle.yaml  swba.yaml
config/archive/: ekf.yaml  evaluation_config.yaml  evaluation_test.yaml  srif.yaml  swba.yaml
config/cameras/: pinhole_640x480.yaml
config/estimators/: cpp_binary.yaml  ekf.yaml  gtsam-ekf.yaml  gtsam-swba.yaml  srif.yaml  swba.yaml
config/imus/: consumer_grade.yaml  mpu6050.yaml  tactical_grade.yaml
config/landmarks/: dense_urban.yaml
config/noises/: aggressive.yaml  low_noise.yaml  standard.yaml
config/scenarios/: challenging_conditions.yaml  cpp_estimator_demo.yaml  drone_survey.yaml  indoor_mapping.yaml  multi_sensor_fusion.yaml  outdoor_navigation.yaml  vio_example.yaml
config/simulation/: circle_easy.yaml  circle_medium.yaml  circle_slow.yaml  figure8_easy.yaml  figure8_hard.yaml  figure8_slow.yaml  line_slow.yaml  spiral_medium.yaml  spiral_slow.yaml
config/trajectories/: circle.yaml  figure8.yaml  line.yaml  random_walk.yaml  spiral.yaml
cpp_estimation/: CMakeLists.txt  README.md
cpp_estimation/examples/: CMakeLists.txt  example_usage.cpp  mock_estimator.cpp  read_python_data.cpp  save_estimator_result.cpp  verify_landmark_observations.cpp
cpp_estimation/include/simulation_io/: data_structures.hpp  estimator_result_io.hpp  json_io.hpp
cpp_estimation/test/: CMakeLists.txt  test_json_io.cpp  test_landmark_observations.cpp  test_load_python.cpp
cpp_io/: CMakeLists.txt
cpp_io/cmake/: SimulationIOConfig.cmake.in
cpp_io/examples/: CMakeLists.txt
cpp_io/test/: CMakeLists.txt
data/configs/: educational.yaml
doc/: api_reference.md  architecture.md  conventions.md  dev-plan.md  requirements.md  system_design.md  technical_specifications.md
docs/: architecture.md  estimation.md  evaluation.md  imu.md  migration_to_gtsam.md  plotting.md  simulation.md  tooling.md
examples/: ekf_demo.py
projects/2025.8.11/: dev-plan.md
projects/2025.8.21/: dev-plan.md  requirements.md
projects/2025.8.24/: dev-plan.md  requirements.md  specifications.md
projects/2025.8.24-2/: dev-plan.md  requirements.md  specs.md
src/common/: config.py  data_structures.py  json_io.py
src/estimation/: __init__.py  base_estimator.py  camera_model.py  cpp_binary_estimator.py  ekf_slam.py  gtsam_base.py  gtsam_ekf_estimator.py  gtsam_imu_preintegration.py  gtsam_swba_estimator.py  imu_integration.py  multi_imu.py  result_io.py  sensor_sync.py  srif_slam.py  stereo_camera.py  swba_slam.py
src/evaluation/: __init__.py  comparison.py  metrics.py  orchestrator.py
src/io/: tum_vie_reader.py
src/plotting/: __init__.py  comparison_plots.py  enhanced_plots.py  evaluation_dashboard.py  sensor_plot.py  simulation_dashboard.py  swba_plots.py  trajectory_plot.py
src/simulation/: camera_model.py  imu_model.py  (+4 more)
tests/: mock_cpp_estimator.py  test_camera_model.py  test_combined_imu_factor.py  test_comparison.py  test_complete_pipeline.py  test_config.py  test_config_loader.py  test_cpp_binary_integration.py  test_data_structures.py  test_ekf_slam.py  test_estimation.py  test_factor_graph_integration.py  test_gtsam_base.py  test_gtsam_ekf.py  test_gtsam_swba.py  test_imu_integration.py  test_imu_physics.py  test_imu_simulation_vs_gtsam.py  test_integration_simple.py  test_io.py  test_keyframe_preintegration.py  test_keyframe_selector.py  test_landmark_generator.py  test_math_utils.py  test_multi_imu.py  test_phase10_features.py  test_plotting.py  test_preintegration.py  test_preintegration_integration.py  test_preintegration_vs_gtsam.py  test_raw_imu_simulation_comparison.py  test_result_io.py  test_sensor_models.py  test_sensor_sync.py  test_simulation_preintegration.py  test_srif_slam.py  test_stereo_camera.py  test_swba_slam.py  test_trajectory_generators.py  test_trajectory_interpolation.py  (+1 more)
tools/: cli.py  dashboard.py  download.py  e2e_orchestrator.py  e2e_pipeline.py  e2e_simple.py  evaluate.py  evaluate_pipeline.py  evaluation.py  inspect_ground_truth.py  orchestrator.py  simulate.py  slam.py
(+24 files in other folders)
