add_executable(example_usage example_usage.cpp)
target_link_libraries(example_usage PRIVATE simulation_io)

add_executable(read_python_data read_python_data.cpp)
target_link_libraries(read_python_data PRIVATE simulation_io)

add_executable(save_estimator_result save_estimator_result.cpp)
target_link_libraries(save_estimator_result PRIVATE simulation_io)