add_executable(example_usage example_usage.cpp)
target_link_libraries(example_usage PRIVATE simulation_io)

add_executable(read_python_data read_python_data.cpp)
target_link_libraries(read_python_data PRIVATE simulation_io)

add_executable(save_estimator_result save_estimator_result.cpp)
target_link_libraries(save_estimator_result PRIVATE simulation_io)

add_executable(verify_landmark_observations verify_landmark_observations.cpp)
target_link_libraries(verify_landmark_observations PRIVATE simulation_io)

add_executable(mock_estimator mock_estimator.cpp)
target_link_libraries(mock_estimator PRIVATE simulation_io)
# Add thread support for sleep_for
find_package(Threads REQUIRED)
target_link_libraries(mock_estimator PRIVATE Threads::Threads)